--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,12 +6,6 @@
     android:orientation="vertical"
     tools:context="com.company.farmerpocket.activity.HomeActivity">
 
-
-    <Button
-        android:id="@+id/btn_go_web_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:text="点我跳转到webView"/>
+    <include layout="@layout/layout_home_toolbar"/>
 
 </LinearLayout>
