--- a/app/src/main/res/layout/layout_slid_menu.xml
+++ b/app/src/main/res/layout/layout_slid_menu.xml
@@ -12,254 +12,100 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0.5"
-            android:background="@color/gray_8f"/>
+            android:background="@color/gray_8f" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+
+        <ImageView
+            android:id="@+id/slid_menu_item_one"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/view_selector_gray_white">
+            android:layout_centerVertical="true"
+            android:src="@mipmap/slid_menu_item_chaye" />
 
-            <ImageView
-                android:id="@+id/one"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/one"
-                android:text="茶叶"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0.5"
-            android:layout_marginLeft="@dimen/dimen_20"
-            android:background="@color/gray_8f"/>
+            android:background="@color/gray_8f" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+
+        <ImageView
+            android:id="@+id/slid_menu_item_two"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/view_selector_gray_white">
-
-            <ImageView
-                android:id="@+id/two"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/two"
-                android:text="水果"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-        </RelativeLayout>
+            android:layout_centerVertical="true"
+            android:src="@mipmap/slid_menu_item_shuiguo" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0.5"
-            android:layout_marginLeft="@dimen/dimen_20"
-            android:background="@color/gray_8f"/>
+            android:background="@color/gray_8f" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/slid_menu_item_three"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/view_selector_gray_white">
-
-            <ImageView
-                android:id="@+id/three"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/three"
-                android:text="农产品"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-        </RelativeLayout>
+            android:layout_centerVertical="true"
+            android:src="@mipmap/slid_menu_item_nongchan" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0.5"
-            android:layout_marginLeft="@dimen/dimen_20"
-            android:background="@color/gray_8f"/>
+            android:background="@color/gray_8f" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+
+        <ImageView
+            android:id="@+id/slid_menu_item_four"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/view_selector_gray_white">
+            android:layout_centerVertical="true"
+            android:src="@mipmap/slid_menu_item_shuichan" />
 
-            <ImageView
-                android:id="@+id/four"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/four"
-                android:text="水产海鲜"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0.5"
-            android:layout_marginLeft="@dimen/dimen_20"
-            android:background="@color/gray_8f"/>
+            android:background="@color/gray_8f" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+
+        <ImageView
+            android:id="@+id/slid_menu_item_five"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/view_selector_gray_white">
+            android:layout_centerVertical="true"
+            android:src="@mipmap/slid_menu_item_jinkoushuiguo" />
 
-            <ImageView
-                android:id="@+id/five"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/five"
-                android:text="进口水果"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0.5"
-            android:layout_marginLeft="@dimen/dimen_20"
-            android:background="@color/gray_8f"/>
+            android:background="@color/gray_8f" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+
+        <ImageView
+            android:id="@+id/slid_menu_item_six"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/view_selector_gray_white">
-
-            <ImageView
-                android:id="@+id/six"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/six"
-                android:text="进口农产品"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-        </RelativeLayout>
+            android:layout_centerVertical="true"
+            android:src="@mipmap/slid_menu_item_jinkounongchan" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0.5"
-            android:layout_marginLeft="@dimen/dimen_20"
-            android:background="@color/gray_8f"/>
+            android:background="@color/gray_8f" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/slid_menu_item_seven"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/view_selector_gray_white">
+            android:layout_centerVertical="true"
+            android:src="@mipmap/slid_menu_item_jinkoushuichan" />
 
-            <ImageView
-                android:id="@+id/seven"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/seven"
-                android:text="进口水产"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-        </RelativeLayout>
 
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0.5"
-            android:layout_marginLeft="@dimen/dimen_20"
-            android:background="@color/gray_8f"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/view_selector_gray_white">
-
-            <ImageView
-                android:id="@+id/eight"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="20dp"
-                android:layout_toRightOf="@id/eight"
-                android:text="话费充值"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-        </RelativeLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/dimen_0.5"
-            android:background="@color/gray_8f"/>
+            android:background="@color/gray_8f" />
 
     </LinearLayout>
 
