--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,6 +27,8 @@
 
     <color name="common_background_grey">#f8f8f8</color>
     <color name="common_view_grey">#e5e5e5</color>
+    <color name="slid_menu_grey">#EDEDEB</color>
+    <color name="home_tab_text_color">#FF3261</color>
 
     <color name="gray_cc">#cccccc</color><!--灰色cc -->
     <color name="gray_8f">#8f8f8f</color><!--灰色8f -->
