--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,6 +6,35 @@
     android:orientation="vertical"
     tools:context="com.company.farmerpocket.activity.HomeActivity">
 
-    <include layout="@layout/layout_home_toolbar"/>
+    <include layout="@layout/layout_home_toolbar"
+        android:id="@+id/home_toolbar"/>
+
+    <!--<ScrollView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent">-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.company.farmerpocket.component.banner.ConvenientBanner
+                android:id="@+id/convenientBanner"
+                android:layout_width="match_parent"
+                android:layout_height="160dp" />
+
+            <LinearLayout
+                android:id="@+id/home_content_layout"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    <!--</ScrollView>-->
 
 </LinearLayout>
