--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,21 +1,18 @@
-<com.company.farmerpocket.component.slidmenu.SlidingMenu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ghy="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/id_slid_menu_tab"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/slid_menu_grey"
-    android:scrollbars="none"
-    ghy:rightPadding="100dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="horizontal">
 
-        <include layout="@layout/layout_slid_menu" />
+        <!--<include layout="@layout/layout_slid_menu" />-->
 
         <include layout="@layout/activity_main_content"/>
 
     </LinearLayout>
 
-</com.company.farmerpocket.component.slidmenu.SlidingMenu>
+</LinearLayout>
