--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,9 +9,9 @@
     <include layout="@layout/layout_home_toolbar"
         android:id="@+id/home_toolbar"/>
 
-    <!--<ScrollView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent">-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -35,6 +35,6 @@
 
         </LinearLayout>
 
-    <!--</ScrollView>-->
+    </ScrollView>
 
 </LinearLayout>
