--- a/app/src/main/res/layout/layout_recom_toolbar.xml
+++ b/app/src/main/res/layout/layout_recom_toolbar.xml
@@ -4,28 +4,19 @@
     android:layout_height="50dp"
     android:background="@color/colorApp">
 
-    <ImageView
-        android:id="@+id/home_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:paddingLeft="@dimen/dimen_10"
-        android:paddingRight="@dimen/dimen_20"
-        android:src="@mipmap/icon_menu" />
-
 
     <TextView
-        android:id="@+id/home_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center_vertical"
-        android:text="天天食惠"
+        android:text="今日推荐"
         android:textColor="@color/white"
         android:textSize="24sp" />
 
 
     <ImageView
-        android:id="@+id/home_search"
+        android:id="@+id/iv_recom_search"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
