--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -9,12 +9,40 @@
 
     <include layout="@layout/layout_user_toolbar" />
 
+    <!--未登录布局-->
     <LinearLayout
-        android:id="@+id/user_data_layout"
+        android:id="@+id/user_layout_no_login"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@drawable/user_selector_white_gray"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_user_login"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="@dimen/dimen_20"
+            android:src="@mipmap/icon_login"/>
+
+        <ImageView
+            android:id="@+id/iv_user_regist"
+            android:layout_width="80dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="@dimen/dimen_20"
+            android:src="@mipmap/icon_regist"/>
+
+    </LinearLayout>
+
+    <!--登录用户资料布局-->
+    <LinearLayout
+        android:id="@+id/user_layout_login"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:background="@drawable/user_selector_white_gray"
         android:gravity="center_vertical"
+        android:visibility="gone"
+        tools:visibility="visible"
         android:orientation="horizontal">
 
         <ImageView
@@ -22,7 +50,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_marginLeft="@dimen/dimen_10"
-            android:src="@mipmap/tab_icon_me_select" />
+            android:src="@mipmap/user_head_icon_pressed" />
 
         <TextView
             android:layout_width="wrap_content"
