--- a/app/src/main/res/layout/layout_slid_menu.xml
+++ b/app/src/main/res/layout/layout_slid_menu.xml
@@ -15,7 +15,7 @@
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_marginTop="@dimen/dimen_40"
-            android:src="@mipmap/tab_icon_me_select" />
+            android:src="@mipmap/user_head_icon_pressed" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,16 +26,16 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
                 android:src="@mipmap/icon_login" />
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="80dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/dimen_20"
+                android:layout_marginLeft="@dimen/dimen_30"
                 android:src="@mipmap/icon_regist" />
         </LinearLayout>
 
