--- a/app/src/main/res/layout/activity_common_goods_list.xml
+++ b/app/src/main/res/layout/activity_common_goods_list.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.company.farmerpocket.component.refreshload.PullToRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/common_refresh_scroll_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.company.farmerpocket.activity.CommonGoodsListActivity">
+    android:layout_height="match_parent">
 
-</RelativeLayout>
+    <include layout="@layout/pull_to_refresh_head" />
+
+    <!-- 支持所有实现Pullable接口的View -->
+    <com.company.farmerpocket.component.refreshload.pullableview.PullableRecyclerView
+        android:id="@+id/refresh_common_recycler_content_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white" />
+
+    <include layout="@layout/pull_to_refresh_load_more" />
+
+</com.company.farmerpocket.component.refreshload.PullToRefreshLayout>
