首页列表边距调整
首页列表边距调整

--- a/app/src/main/res/layout/activity_home_content.xml
+++ b/app/src/main/res/layout/activity_home_content.xml
@@ -105,6 +105,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:columnWidth="160dp"
+            android:paddingLeft="@dimen/dimen_4"
+            android:paddingRight="@dimen/dimen_4"
             android:gravity="center"
             android:numColumns="2"
             android:stretchMode="columnWidth" />
