--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,5 +35,6 @@
     <color name="gray_8f">#8f8f8f</color><!--灰色8f -->
 
     <color name="gray_e0_line">#e0e0e0</color><!--灰色e0 -->
+    <color name="black_p50">#7f000000</color>
 
 </resources>
