--- a/app/src/main/res/values/umeng_socialize_style.xml
+++ b/app/src/main/res/values/umeng_socialize_style.xml
@@ -85,7 +85,7 @@
         <item name="android:paddingTop">5dp</item>
     </style>
 
-    <style name="umeng_socialize_edit_padding">
+    <!--<style name="umeng_socialize_edit_padding">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">fill_parent</item>
         <item name="android:background">@color/umeng_socialize_list_item_bgcolor</item>
@@ -93,7 +93,7 @@
         <item name="android:layout_marginRight">6dp</item>
         <item name="android:layout_marginTop">6dp</item>
         <item name="android:layout_marginBottom">6dp</item>
-    </style>
+    </style>-->
 
 
 </resources>
