--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -45,7 +45,7 @@
         tools:visibility="visible"
         android:orientation="horizontal">
 
-        <ImageView
+        <com.company.farmerpocket.view.CircleImageView
             android:id="@+id/iv_user_head"
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -53,6 +53,7 @@
             android:src="@mipmap/user_head_icon_pressed" />
 
         <TextView
+            android:id="@+id/tv_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dimen_10"
