--- a/app/src/main/res/layout/abs_base_activity.xml
+++ b/app/src/main/res/layout/abs_base_activity.xml
@@ -6,6 +6,8 @@
 
     <include layout="@layout/layout_base_toolbar"/>
 
+    <include layout="@layout/layout_base_toolbar_search"/>
+
     <FrameLayout
         android:id="@+id/abs_base_frame_layout"
         android:layout_width="match_parent"
