--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -68,11 +68,14 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@null"
+                    android:textCursorDrawable="@null"
                     android:gravity="center_vertical"
                     android:hint="@string/username_login_hint"
                     android:paddingLeft="@dimen/dimen_10"
+                    android:inputType="phone"
                     android:textColorHint="@color/gray_e0_line"
-                    android:textSize="20sp" />
+                    android:textColor="@color/gray_8f"
+                    android:textSize="18sp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -87,6 +90,7 @@
                 android:layout_height="@dimen/dimen_50"
                 android:layout_marginLeft="@dimen/dimen_20"
                 android:layout_marginRight="@dimen/dimen_20"
+                android:layout_marginTop="@dimen/dimen_4"
                 android:background="@drawable/login_linearlayout_top"
                 android:orientation="horizontal">
 
@@ -96,11 +100,14 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@null"
+                    android:textCursorDrawable="@null"
                     android:gravity="center_vertical"
                     android:hint="@string/username_login_pass_hint"
                     android:paddingLeft="@dimen/dimen_10"
                     android:textColorHint="@color/gray_e0_line"
-                    android:textSize="20sp" />
+                    android:textColor="@color/gray_8f"
+                    android:inputType="textPassword"
+                    android:textSize="18sp" />
 
                 <ImageView
                     android:layout_width="wrap_content"
@@ -114,11 +121,11 @@
                 android:id="@+id/tv_login_login"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_50"
-                android:layout_marginBottom="@dimen/dimen_60"
+                android:layout_marginBottom="@dimen/dimen_40"
                 android:layout_marginLeft="@dimen/dimen_20"
                 android:layout_marginRight="@dimen/dimen_20"
                 android:layout_marginTop="@dimen/dimen_20"
-                android:background="@drawable/login_to_login"
+                android:background="@drawable/button_selector_bg"
                 android:gravity="center"
                 android:text="@string/user_login"
                 android:textColor="@color/white"
