--- a/app/src/main/res/layout/layout_slid_menu.xml
+++ b/app/src/main/res/layout/layout_slid_menu.xml
@@ -25,18 +25,28 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-            <ImageView
+            <TextView
+                android:id="@+id/slid_user_login"
                 android:layout_width="80dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:src="@mipmap/icon_login" />
+                android:layout_height="wrap_content"
+                android:text="登录"
+                android:gravity="center"
+                android:padding="@dimen/dimen_8"
+                android:textColor="@color/white"
+                android:layout_marginRight="@dimen/dimen_10"
+                android:background="@drawable/button_selector_bg"/>
 
-            <ImageView
+            <TextView
+                android:id="@+id/slid_user_regist"
                 android:layout_width="80dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/dimen_30"
-                android:src="@mipmap/icon_regist" />
+                android:layout_height="wrap_content"
+                android:text="注册"
+                android:gravity="center"
+                android:padding="@dimen/dimen_8"
+                android:textColor="@color/white"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:background="@drawable/button_selector_bg"/>
+
         </LinearLayout>
 
         <ScrollView
