--- a/app/src/main/res/layout/activity_shop_address.xml
+++ b/app/src/main/res/layout/activity_shop_address.xml
@@ -4,6 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context="com.company.farmerpocket.activity.MessageActivity">
+    tools:context="com.company.farmerpocket.activity.ShopAddressActivity">
 
 </RelativeLayout>
